# calque

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  gate.yml  publish.yml
src/calque/: __init__.py  cli.py  config.py  errors.py  exclusions.py  model.py  service.py  store.py  sync.py
tests/: test_cli.py  test_config.py  test_errors.py  test_exclusions.py  test_model.py  test_service.py  test_store.py  test_sync.py
