[project]
name = "calque"
dynamic = ["version"]
description = "Mirrors events between calendars as anonymized busy blocks, using your local macOS calendar store (EventKit)."
readme = "README.md"
authors = [
    { name = "Graham Jones", email = "graham@agilezebra.com" },
]
requires-python = ">=3.13"
license = "MIT"
keywords = ["calendar", "macos", "eventkit", "availability", "busy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "pyobjc-framework-eventkit>=12.2",
]

[project.scripts]
calque = "calque.cli:main"

[project.urls]
Homepage = "https://github.com/agilezebra/calque"
Repository = "https://github.com/agilezebra/calque"
Issues = "https://github.com/agilezebra/calque/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
managed = true
package = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "poethepoet>=0.38.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 120
target-version = "py313"  # lint against the lowest supported version

[tool.ruff.format]
# Black style
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D107",    # __init__ is documented by its class docstring
    "D203",    # one-blank-line-before-class — conflicts with D211
    "D213",    # multi-line-summary-second-line — conflicts with D212
    "COM812",  # trailing-comma-missing — handled by the formatter
    "E501",    # line-too-long — handled by the formatter
    "LOG015",  # root-logger calls are deliberate
    "TRY400",  # logging.error without a traceback is valid for expected, readable failures
    "PLW2901", # loop variable overwritten by assignment target
    "TC001",   # first-party typing-only imports stay at module scope; no TYPE_CHECKING ceremony
    "TC002",   # third-party typing-only imports 
    "TC003",   # standard-library typing-only imports
]

dummy-variable-rgx = "_+|unused|.*_unused"

[tool.ruff.lint.per-file-ignores]
"store.py" = [
    "ANN401",  # PyObjC handles are genuinely dynamic; Any is the honest type at this boundary
]

"cli.py" = [
    "T201",    # writes results to stdout by design
]

"tests/*" = [
    "S101",    # asserts are the point of a test
    "D103",    # test functions document themselves through their names
    "PLR2004", # literal comparisons are normal in test assertions
    "PLR0913", # event-building helpers take one keyword per overridable field
    "INP001",  # the test tree is deliberately not an importable package
]

[tool.ruff.lint.isort]
known-first-party = ["calque"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"  # type-check against the lowest supported version
strict = true

[[tool.mypy.overrides]]
module = ["EventKit.*", "Foundation.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The EventKit boundary speaks to an untyped C framework so we relax return-any here.
module = ["calque.store"]
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format --check ."
types = "mypy ."
test = "pytest"
cover = "pytest --cov=calque --cov-report=term-missing --cov-report=html"
check = [
    { ref = "lint" },
    { ref = "format" },
    { ref = "types" },
    { ref = "test" },
]
